[package]
name = "libos-terminal"
edition = "2024"

[lib]
name = "os_terminal"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1

[dependencies.os-terminal]
version = "0.6.11"
features = ["truetype"]
default-features = false

[features]
default = []
embedded-font = []
